--- a/templates/sections/basic-info.html
+++ b/templates/sections/basic-info.html
@@ -4,3 +4,4 @@
 <scheduled-crons></scheduled-crons>
 <cron-history></cron-history>
 <io-stats></io-stats>
+<upload-transfer-rate-chart></upload-transfer-rate-chart>
