--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
   padding-top: 0;
   border-top: 1px solid #4F8EF7;
   
-  background: url(../img/themes/crossword.png);
+  background: #3B3B3B;
 
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
@@ -176,8 +176,8 @@ body {
   margin-top: 10px;
   margin: 0 auto;
   margin-top: 20px;
-  margin-left: 50px;
-  margin-bottom: 50px;
+  margin-left: 10px;
+    margin-bottom: 0px;
 }
 @media (max-width: 768px) { 
   .plugin {
