--- a/templates/sections/system-status.html
+++ b/templates/sections/system-status.html
@@ -1,5 +1,6 @@
 <ram-chart></ram-chart>
 <cpu-avg-load-chart></cpu-avg-load-chart>
 <cpu-utilization-chart></cpu-utilization-chart>
-<ram-intensive-processes></ram-intensive-processes>
 <cpu-intensive-processes></cpu-intensive-processes>
+<upload-transfer-rate-chart></upload-transfer-rate-chart>
+<download-transfer-rate-chart></download-transfer-rate-chart>
