Just few changes to make it eatable

--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,7 @@ body {
 .plugin {
   float: left;
   padding: 0;
+  width: 380px;
   background-color: #FFFFFF;
   color: black;
   text-align: center;
