--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 * {
   font-family: 'Merriweather', Arial, sans-serif;
   letter-spacing: .1rem;
+	box-sizing: border-box;
 }
 html {
   margin-top: 0px;
@@ -166,19 +167,18 @@ body {
 
 /***** Plugin ****/
 .plugin {
-  float: left;
-  padding: 0;
-  width: 380px;
-  background-color: #FFFFFF;
-  color: black;
-  text-align: center;
-  border-radius: 2px;
-  box-shadow: 0 5px 10px rgba(0,0,0,.53),0 3px 10px rgba(0,0,0,.16);
-  margin-top: 10px;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-left: 10px;
-    margin-bottom: 0px;
+	float: left;
+	padding: 0;
+	background-color: #FFFFFF;
+	color: black;
+	text-align: center;
+	border-radius: 2px;
+	box-shadow: 0 5px 10px rgba(0,0,0,.53),0 3px 10px rgba(0,0,0,.16);
+	margin-top: 10px;
+	margin: 0 auto;
+	margin-top: 20px;
+	margin-left: 10px;
+	margin-bottom: 0px;
 }
 @media (max-width: 768px) { 
   .plugin {
@@ -192,26 +192,27 @@ body {
   }
 }
 .plugin .top-bar {
-  height: 25px;
-  max-width: 100%;
-  padding: 5px;
-  letter-spacing: .1rem;
-  line-height: 1.3rem;
-  font-size: 11px;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #009587;
-  text-align: center;
+	/* height: 25px; */
+	max-width: 100%;
+	padding: 20px;
+	letter-spacing: .1rem;
+	line-height: 1.3rem;
+	font-size: 11px;
+	text-transform: uppercase;
+	font-weight: 600;
+	color: #009587;
+	text-align: center;
 }
 .plugin .no-padding {
   padding: 0px;
 }
 .plugin-body {
-  height: 300px;
-  font-size: 12px;
-  line-height: 7px;
-  overflow: auto;
-  border-top: 1px solid #ececec;
+	display: inline-block;
+	height: 300px;
+	font-size: 12px;
+	line-height: 7px;
+	overflow: auto;
+	border-top: 1px solid #ececec;
 }
 .plugin last-update{
   font-size: 11px;
@@ -305,12 +306,13 @@ refresh-btn button:active {
 /**** General Elements ****/
 table
 {
-  font-size: 10px;
-  margin: 0;
-  min-width: 400px;
-  border-collapse: collapse;
-  text-align: left;
-  table-layout:fixed;
+	font-size: 10px;
+	margin: 0;
+	min-width: 395px;
+	border-collapse: collapse;
+	text-align: left;
+	table-layout: fixed;
+	margin-right: 5px;
 }
 table th, 
 table td {
